# fsync

./: .env.example  .gitignore  docker-compose.yaml  pyproject.toml
llm_lab/essential-RAG/: part-2.ipynb  part-3.ipynb
materials/database/: ddl_table.sql
src/scraper/: producer.py  worker.py
src/utils/: data_processor.py  elastic_client.py  helpers.py  logger.py  minio_client.py  neo4j_client.py
