[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "boto3>=1.43.9",
    "curl-cffi>=0.15.0",
    "elasticsearch>=8.0.0,<9.0.0",
    "google-genai>=2.4.0",
    "ipykernel>=7.2.0",
    "minio>=7.2.20",
    "neo4j>=6.2.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "underthesea>=9.5.0",
]
